# ObscuraWeb

./: .gitignore  README.md
bot/: config_reader.py  start_bot.py
bot/handlers/: base.py
bot/keyboards/: inline_keyboards.py
bot/middlewares/: database_mw.py  logging_setup.py
client/: .gitignore  package-lock.json  package.json
client/src/: App.tsx  index.css
server/: __main__.py  config_reader.py  pyproject.toml
server/bot/: start_bot.py
server/bot/handlers/: __init__.py  base.py
server/bot/keyboards/: inline_keyboards.py
server/bot/services/: database.py
test_funcs/: database.py  main.py
test_funcs/Functions/: funcs.py  menu.py
web-app/: package-lock.json  package.json
web-app/public/: index.html
web-app/src/: App.js  App.jsx  App.module.css  dark_index.css  index.js
web-app/src/api/: backend.py  config_reader.py  database.py  functions.py  requirements.txt
web-app/src/colors/: dark_index.css
web-app/src/components/NavBar/: NavBar.jsx  NavBar.module.css
web-app/src/components/blocks/footer/: footer.jsx  footer.module.css
web-app/src/components/blocks/header/: header.jsx  header.module.css
web-app/src/components/pages/add_character/: AddCharPage.jsx  AddCharPage.module.css
web-app/src/components/pages/character_edit/: edit_character.jsx  edit_character.module.css
web-app/src/components/pages/character_fractions/: fractions.jsx
web-app/src/components/pages/character_fractions_edit/: fractions_edit.jsx  fractions_edit.module.css
web-app/src/components/pages/character_inventory/: character_inventory.jsx  (+1 more)
(+8 files in other folders)
